# aa-skyhook-monitor

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  runtests.py  setup.cfg  tox.ini
.github/workflows/: autotester.yml  release.yml
aa_skyhook_monitor/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  managers.py  models.py  providers.py  tasks.py  urls.py  views.py
aa_skyhook_monitor/locale/de/LC_MESSAGES/: django.mo  django.po
aa_skyhook_monitor/migrations/: 0001_initial.py  0002_remove_skyhook_structure_name_skyhook_is_active_and_more.py  0003_skyhook_state_skyhook_theft_vulnerability_end_and_more.py  0004_skyhookreagent_volume.py  0005_alter_skyhookowner_options.py  0006_skyhook_notified_start_for_and_more.py  0007_skyhookconfiguration.py  0008_alter_skyhookconfiguration_discord_webhook_url_and_more.py  0009_skyhookconfiguration_last_full_sync.py  0010_raidable_skyhook_and_detail_fields.py  0011_raid_watchlist.py  0012_raidableskyhook_planet_name.py  0013_skyhookconfiguration_raidable_webhook_url_and_more.py  0014_remove_skyhook_effective_workforce_and_more.py  0015_delete_raidablenotification_raidableskyhook_notified_and_more.py
aa_skyhook_monitor/models/: __init__.py  skyhook.py
aa_skyhook_monitor/static/aa_skyhook_monitor/css/: aa-skyhook-monitor.css
aa_skyhook_monitor/static/aa_skyhook_monitor/js/: aa-skyhook-monitor.js
aa_skyhook_monitor/templates/aa_skyhook_monitor/: base.html  index.html  raidable.html
aa_skyhook_monitor/templates/aa_skyhook_monitor/bundles/: aa-skyhook-monitor-css.html  aa-skyhook-monitor-js.html
aa_skyhook_monitor/templates/aa_skyhook_monitor/partials/navigation/: navigation.html
aa_skyhook_monitor/tests/: test_models.py  test_tasks.py  test_views.py
testauth/settings/: local.py
