[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-skyhook-monitor"
description = "Alliance Auth plugin to monitor EVE Online Skyhook structures"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "GurkeTonic", email = "pberbuir@googlemail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=5.1.0",
    "django-esi>=4",
    "django-eveonline-sde",
]

[project.entry-points."allianceauth.app"]
aa_skyhook_monitor = "aa_skyhook_monitor.apps:AaSkyhookMonitorConfig"

[project.urls]
Homepage = "https://github.com/GurkeTonic/aa-skyhook-monitor"
Source = "https://github.com/GurkeTonic/aa-skyhook-monitor"
Tracker = "https://github.com/GurkeTonic/aa-skyhook-monitor/issues"
Changelog = "https://github.com/GurkeTonic/aa-skyhook-monitor/blob/main/CHANGELOG.md"

[tool.hatch]
build.include = [
    "/aa_skyhook_monitor",
]
version.path = "aa_skyhook_monitor/__init__.py"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["aa_skyhook_monitor"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903"]

[tool.coverage.run]
source = ["aa_skyhook_monitor"]
branch = true
omit = [
    "aa_skyhook_monitor/migrations/*",
    "aa_skyhook_monitor/tests/*",
]
