[metadata]
name = aa-skyhook-monitor
version = 0.1.0
description = Alliance Auth plugin to monitor Skyhook bay contents
author = PBerb
license = MIT

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    allianceauth>=5.1.0

[options.entry_points]
allianceauth.app =
    aa_skyhook_monitor = aa_skyhook_monitor.apps:AaSkyhookMonitorConfig
