[metadata]
name = aa-skyhook-monitor
version = 0.1.0
description = Alliance Auth plugin to monitor EVE Online Skyhook bay contents
long_description = file: README.md
long_description_content_type = text/markdown
author = GurkeTonic
author_email = pberbuir@googlemail.com
license = MIT
url = https://github.com/GurkeTonic/aa-skyhook-monitor
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    allianceauth>=5.1.0

[options.entry_points]
allianceauth.app =
    aa_skyhook_monitor = aa_skyhook_monitor.apps:AaSkyhookMonitorConfig

[options.package_data]
aa_skyhook_monitor =
    templates/**/*
    static/**/*
