[metadata]
name = aa-skyhook-monitor
version = 0.1.2
description = Alliance Auth plugin to monitor EVE Online Skyhook structures
long_description = file: README.md
long_description_content_type = text/markdown
author = GurkeTonic
author_email = pberbuir@googlemail.com
license = MIT
url = https://github.com/GurkeTonic/aa-skyhook-monitor

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    allianceauth>=5.1.0

[options.package_data]
aa_skyhook_monitor =
    templates/**/*

[options.entry_points]
allianceauth.app =
    aa_skyhook_monitor = aa_skyhook_monitor.apps:AaSkyhookMonitorConfig
